<resources>
    <string name="action_settings">Settings</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_file">发送文件</string>
    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>
    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>
    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>
    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>
    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>
    <string name="pay_by_wx">客户端签名微信支付</string>
    <string name="pay_by_wxap">服务器端签名微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_name">GoTo</string>
    <string name="app_name_chinese">走兔同城</string>
    <string name="main_activity_topbar_title">走兔同城</string>
    <string name="headImageNameTest">胡小姐</string>
    <string name="headImageTelTest">18058378727</string>
    <string name="myOrderTest">我的订单</string>
    <string name="shareOrderGet"> 分享订单领取优惠</string>
    <string name="defaultAddress">常用地址</string>
    <string name="myMoney">我的钱包</string>
    <string name="message">消息</string>
    <string name="oneUnknowMessage">1条未读消息</string>
    <string name="active">活动</string>
    <string name="doubleForFree">双十一免费送</string>
    <string name="setting">设置</string>
    <string name="hotTelForGov">官方热线</string>
    <string name="sisterForEveryThing">萌妹客服包治百病</string>
    <string name="version">版本号1.0.0</string>
    <string name="serviceItem">服务项目</string>
    <string name="helpMeBuy">帮我买</string>
    <string name="helpMePass">帮我送</string>
    <string name="orderbyonetouch">一键下单</string>
    <string name="toPay">去支付</string>
    <string name="moneyTest">￥9.0元</string>
    <string name="buyAddress">购买地址</string>
    <string name="addressNameTest">车站路联华超市</string>
    <string name="addressTest">浙江省乐清市柳市镇巴度电商园46号</string>
    <string name="receiverInfo">收件人信息</string>
    <string name="nameTest">陈先生</string>
    <string name="telTest">18058378727</string>
    <string name="writeTheBestInfoForTheGoodsPlease">请尽可能详细填写商品名称规格数量等</string>
    <string name="shoppingOrder">购物清单</string>
    <string name="orderRemark">订单备注</string>
    <string name="goodsPrice">商品金额</string>
    <string name="payBySmallTicket">凭购物小票,线下支付</string>
    <string name="unknowPrice">价格未知</string>
    <string name="senderInfo">发件人信息</string>
    <string name="goodsWeight">物品重量</string>
    <string name="senddis">配送里程</string>
    <string name="goodsType">物品种类</string>
    <string name="receiveTime">收件时间</string>
    <string name="weightKgTest">2kg</string>
    <string name="mileTest">5.6km</string>
    <string name="dinner">餐饮</string>
    <string name="timeTest">今 17:15</string>
    <string name="exitLogin">退出登入</string>
    <string name="settingTel">修改手机号</string>
    <string name="viewBack">意见反馈</string>
    <string name="serviceTerm">服务条款</string>
    <string name="chargeStandar">收费标准</string>
    <string name="goodSay">给予好评</string>
    <string name="aboutGoto">关于走兔</string>
    <string name="activityPast">往期活动</string>
    <string name="searchforinputordernumorkeyword">输入订单号或者关键字查询吧</string>
    <string name="inputsearchaddress">请输入搜索地址</string>
    <string name="allOrder">全部订单</string>
    <string name="waitForSay">待评价</string>
    <string name="orderNum">订单编号</string>
    <string name="orderTime">下单时间</string>
    <string name="orderTimeTest">2016-01-12 14:25:30</string>
    <string name="leftArrowUnicode">\u2190</string>
    <string name="rightArrowUnicode">------------\u2192</string>
    <string name="mywallet">我的钱包</string>
    <string name="chargeNow">立即充值</string>
    <string name="submitOk">确认提交</string>
    <string name="ideasubmitsaid">亲爱的客户,您的意见与评论对我们非常重要,\n 希望您仔细耐心写完每一次反馈</string>
    <string name="confirmDegree">身份验证</string>
    <string name="bangNewTel">绑定新手机</string>
    <string name="finish">完成</string>
    <string name="areaNum">+86</string>
    <string name="inputTelNum">请输入手机号码</string>
    <string name="inputConfirmNum">请输入验证码</string>
    <string name="getConfirmNum">获取验证码</string>
    <string name="inputPass">请输入密码</string>
    <string name="about">关于</string>
    <string name="gotocityv1.0">走兔同城v1.0.0</string>
    <string name="gotoinstru">\t \t走兔同城是一款同城快递在线服务应用,为用户提供快递查询、在线寄件、物流跟踪等服务,致力于解决用户与快递员之间由于位置、时间、信息不对称而导致的寄收快递体验差的问题。</string>
    <string name="gotocity">走兔同城</string>
    <string name="companyrights">©2017 gotogoto.com all rights reserved</string>
    <string name="serviceProto">服务协议</string>
    <string name="serviceProtoItem">1.为保证托寄物安全送达，寄件人寄件时应履行以下义务： 如实申报托寄物内容和价值，并准确、清除地填写寄件人、收件人的名称、地址、联系电话等资料；\n\n

2.寄件人不得邮寄或在所邮寄货物中夹带国家禁止运输的物品，对承运人已接受委托，后发现属于承运人不能安全、合法运送的物品（包括但不限于危险品、违禁品、假冒伪劣产品），承运人保留拒绝运送的权利，因违背此约定造成承运人的一切损失由寄件人承担赔偿责任。\n\n

3.委托承运货物重量计量单位为千克。
 一、20公里范围内
(1)、基础定价：3公里范围内，首重不超过5公斤，每单配送价格5元；
(2)、超出距离定价：超出3公里范围，每增加1公里，增收2元；
(3)、超出重量定价：首重10公斤，每增加1公斤，增1元。
(4)、体积重量：体积重量是一种反映包裹密度的计算方式。低密度的包裹，比较其实际重量，占用的空间通常较大。计算出来的体积重量，会与其实际重量比较，取较重者为计费重量，用以计算运费。根据市场惯例，体积重量(kg)的计算方法为:长度(cm)x宽度(cm)x高度(cm)÷6000
二、20公里范围外
 （1）、超出20公里，双倍定价；
 （2）、每增加1公里，增收4元；
\n\n
4.寄件人或收件人不得无故拒付任何服务费用；收件人拒绝支付费用的，寄件人承担支付与托运物品给有关费用的连带责任。寄件人或收件人无故不支付费用的，承运人可以对承运货物行使处置权、留置权及其它补救性权利，由此而产生的后果由寄件人或收件人承担。
\n\n
5.承运人建议寄件人办理货物保价运输，声明保价并支付相应保价费。承运人对寄件人托运的单票货物报价限额为2万元。单票货物报价超过2万元的，寄件人应拆分托运。若寄件人声明保价并支付保价费，发生货物丢损，承运人按如下规则赔偿：货物全部灭失，按货物保价声明价值赔偿；货物部分毁损或灭失，按声明价值和损失比例赔偿，最高不超过声明价值。声明价值高于实际价值的，按实际价值赔偿。
\n\n
6.寄件人未办理保价而发生货物丢损，承运人按照实际损失在丢损货物所对应运费的5倍赔偿额以内赔偿。按以上方式计算得出的赔偿额超过货物实际价值的部分无效。
\n\n
7.寄件人委托承运人代收货款不代表该次货物的实际价值；如果运输货物在运输途中出现损坏或灭失赔偿额按照本条款第5、6条约定赔偿，与代收货款无关。收货人签收后因货物品名、性质、型号等原因而不支付代收货款，承运人不承担代收货款无法收回的责任。\n\n </string>
    <string name="accountBalance">账户余额</string>
    <string name="ticket">优惠卷</string>
    <string name="personPoints">个人积分</string>
    <string name="numTest">6</string>
    <string name="addressManage">地址管理</string>
    <string name="addAddress">添加地址</string>
    <string name="wordMo">默</string>
    <string name="delete">删除</string>
    <string name="query">确认</string>
    <string name="forUpThePasserSpiderPleaseConfirmCareful">为了提高跑腿员配送效率，请阁下再次核对物品</string>
    <string name="writeCarefulTheGoodsNumAndType">请务必详细填写物品规格及数量</string>
    <string name="goodsTypes">商品种类</string>
    <string name="goodsPriceByUnites">商品金额(元)</string>
    <string name="name">姓名</string>
    <string name="nameCall">名称</string>
    <string name="tel">号码</string>
    <string name="address">地址</string>
    <string name="setDefaultAddress">设置为默认地址</string>
    <string name="historyRecord">历史记录</string>
    <string name="collectAddress">收藏地址</string>
    <string name="nearAddress">附近地址</string>
    <string name="waitforsay">等待评价</string>
    <string name="orderStatus">订单状态</string>
    <string name="orderDetail">订单详情</string>
    <string name="price">价格</string>
    <string name="cancel">取消</string>
    <string name="manualInput">手动输入</string>
    <string name="goodsName">商品名称</string>
    <string name="num">数量</string>
    <string name="lunch">午餐</string>
    <string name="clothes">衣服</string>
    <string name="flower">鲜花</string>
    <string name="fruits">水果</string>
    <string name="afternoon">下午茶</string>
    <string name="packages">包裹</string>
    <string name="cake">蛋糕</string>
    <string name="articles">生活用品</string>
    <string name="file">文件</string>
</resources>