<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_myinfo_changebirth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ly_myinfo_changebirth_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            >
            <RelativeLayout
                android:id="@+id/rly_popupwindow_goodstype_cancel"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/cancel"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/goodsType"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rly_popupwindow_goodstype_query"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/query"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/the_split_line_height"
            android:background="@color/gray"
            />


        <LinearLayout
            android:id="@+id/lly_popupwindow_goodstype_cbmanage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"

                >
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_lunch"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/lunch"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_margin="1dp"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_clothes"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/clothes"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_margin="1dp"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_flower"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/flower"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_margin="1dp"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_fruit"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/fruits"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:layout_margin="1dp"
                />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_afternoon"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1.5"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/afternoon"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:layout_margin="1dp"
                    android:button="@null"
                />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >
               <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_package"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/packages"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:layout_margin="1dp"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_cake"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/cake"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:layout_margin="1dp"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_articles"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/articles"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:layout_margin="1dp"
                    />
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_file"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/file"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:layout_margin="1dp"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <CheckBox
                    android:id="@+id/cb_popupwindow_goodstype_manualInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/activity_gray_bg_half_round_radius"
                    android:text="@string/manualInput"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:button="@null"
                    android:gravity="center"
                    />
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>