<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSettingActivityContentWhiteBg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_setting_item_margin_left_size"

        >
        <!--修改手机号-->
        <RelativeLayout
            android:id="@+id/rly_setting_altertel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingTel"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSettingActivityContentWhiteBg"
            />
        <!--我是分割线-->
        <!--修改手机号-->
        <!--意见反馈-->
        <RelativeLayout
            android:id="@+id/rly_setting_idea_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewBack"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSettingActivityContentWhiteBg"
            />
        <!--我是分割线-->
        <!--意见反馈-->
        <!--服务条款-->
        <RelativeLayout
            android:id="@+id/rly_setting_serviceitem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceTerm"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSettingActivityContentWhiteBg"
            />
        <!--我是分割线-->
        <!--服务条款-->

        <!--收费标准-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chargeStandar"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <!--收费标准-->
    </LinearLayout>


    <!--我是分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSettingActivityContentWhiteBg"
        />
    <!--我是分割线-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_setting_topitem_margin_bottom_size"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_setting_item_margin_left_size"
        >
        <!--给予好评-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodSay"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <!--我是分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSettingActivityContentWhiteBg"
            />
        <!--我是分割线-->
        <!--给予好评-->

        <!--关于走兔-->
        <RelativeLayout
            android:id="@+id/rly_setting_aboutgoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_setting_item_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutGoto"
                android:textColor="@color/colorSettingActivityContentBlackWordBg"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <!--关于走兔-->
    </LinearLayout>
</LinearLayout>