<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="30dp"
    android:orientation="vertical"
    android:background="@color/transparent"
    >
    <!--android:id="@+id/lly_shoppinglist_content_piper_card_item_paperthree"-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_shoppinglist_content_item_height"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_shoppinglist_content_item_margin_left_right_size"
        android:layout_marginRight="@dimen/activity_shoppinglist_content_item_margin_left_right_size"
        android:layout_centerHorizontal="true"
        >
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodsName"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>